--- a/src/Makefile
+++ b/src/Makefile
@@ -6,11 +6,11 @@ CFLAGS := -I . -g -m64 -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -ffreestanding 
 	-Wframe-larger-than=4096 -Wstack-usage=4096 -Wno-unknown-warning-option
 LFLAGS := -nostdlib -z max-page-size=0x1000
 
-ASM := bootstrap.S videomem.S
+ASM := bootstrap.S videomem.S setup_interrupt_handler.S
 AOBJ:= $(ASM:.S=.o)
 ADEP:= $(ASM:.S=.d)
 
-SRC := main.c setup_serial.c setup_pic.c
+SRC := main.c setup_serial.c setup_pic.c setup_idt.c setup_pit.c
 OBJ := $(AOBJ) $(SRC:.c=.o)
 DEP := $(ADEP) $(SRC:.c=.d)
 
